# cercis

./: Cargo.toml  LICENSE  README.md
.github/workflows/: buildAndTest.yml
cercis/src/: lib.rs
component/: Cargo.toml  README.md
component/src/: lib.rs
core/: Cargo.toml  README.md
core/src/: lib.rs  tests.rs
crates/cercis/: Cargo.toml
crates/cersis/: Cargo.toml
crates/html/: Cargo.toml
crates/html/src/: lib.rs  prelude.rs
crates/proc/: Cargo.toml
crates/proc/src/: lib.rs
crates/rsx/: Cargo.toml
crates/rsx/src/: attribute.rs  element.rs  expr.rs  lib.rs  node.rs  prelude.rs
crates/rsx/src/node/: element.rs  expr.rs  fmt.rs  forloop.rs  text.rs
examples/: axum_hello_world.rs  full_page.rs
html/: Cargo.toml  README.md
html/src/: attribute.rs  component.rs  content.rs  element.rs  lib.rs  prelude.rs  render.rs
rsx/: Cargo.toml  README.md
rsx/src/: lib.rs  node.rs  prelude.rs
rsx/src/node/: children.rs  component.rs  element.rs  expr.rs  fmt.rs  forloop.rs  text.rs
rsx/src/node/element/: single.rs
tests/: attributes.rs  raw.rs  tests.rs
