[workspace]
resolver = "2"
members = [ 
  "component", 
  "core",
  "html",
  "rsx"
]

[workspace.package]
version = "0.2.2"
repository = "https://github.com/magwoo/cercis"
keywords = ["rsx", "html", "web", "template"]
license = "MIT"

[workspace.dependencies]
cercis = { path = "core", version = "0.2" }
cercis-rsx = { path = "rsx", version = "0.2" }
cercis-component = { path = "component", version = "0.2" }
cercis-html = { path = "html", version = "0.2" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[package]
name = "cercis-examples"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
publish = false

[dev-dependencies]
cercis.workspace = true

