[workspace]
resolver = "2"
members = [ 
  "component", 
  "core",
  "html",
  "rsx"
]

[workspace.package]
version = "1.2.1"
repository = "https://github.com/magwoo/cercis"
keywords = ["rsx", "html", "web", "template", "jsx"]
license = "MIT"

[workspace.dependencies]
cercis = { path = "core", version = "1" }
cercis-rsx = { path = "rsx", version = "1" }
cercis-component = { path = "component", version = "1" }
cercis-html = { path = "html", version = "1" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[package]
name = "cercis-examples"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
publish = false

[dev-dependencies]
cercis.workspace = true
axum = "0.8"
rand = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

