[package]
name = "cercis-component"
edition = "2021"
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "component macro for cercis"
readme = "./README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
