[package]
name = "cercis"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Template engine for HTML in Rust"
readme = "./README.md"

[dependencies]
cercis-rsx.workspace = true
cercis-component.workspace = true
cercis-html.workspace = true
typed-builder = "0.18.2"

[dev-dependencies]
rand = "0.8.5"

