[package]
name = "cercis-rsx"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "rsx macro for cercis"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = "2.0.60"
