[package]
name = "cercis-rsx"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "rsx macro for cercis"
readme = "./README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
cercis.workspace = true
